# tool-squisher

./: CMakeLists.txt  Makefile  README.md  shader-squisher.c  tool-squisher.c
src/: data_types.h  global_options.c  global_options.h  main.c  tool-squisher.c  version.h  windows.rc
src/cache/: cache.c  cache.h
src/crc/: crc.c  crc.h  crc_forcer.c  crc_forcer.h
src/file/: file.c  file.h
src/resources/: resources.c  resources.h
src/tag/: tag.c  tag.h  tag_fourcc.c  tag_fourcc.h  tag_processing.c  tag_processing.h
src/tag_groups/: actor_variant.c  actor_variant.h  bitmap.c  bitmap.h  decal.c  decal.h  decal_extent.c  grenade_hud_interface.c  grenade_hud_interface.h  hud_globals.c  hud_globals.h  hud_number.h  hud_types.c  hud_types.h  lens_flare.c  lens_flare.h  meter.c  meter.h  model.c  model.h  model_types.h  object.h  scenario.c  scenario.h  scenario_structure_bsp.c  scenario_structure_bsp.h  shader.c  shader.h  shader_model.c  shader_model.h  sound.c  sound.h  tag_groups.h  unit.c  unit.h  unit_hud_interface.c  unit_hud_interface.h  weapon_hud_interface.c  weapon_hud_interface.h
src/tag_groups/scenario/: ai.h
